@@ -5,5 +5,5 @@ DIST jdk-6u2-ea-bin-b02-linux-i586-12_apr_2007.bin 58281121 RMD160 8c692ddb81be0
 DIST jdk-7-ea-bin-b13-linux-amd64-24_may_2007.bin 56320100 RMD160 efae6584cd3a350f32848b0044e02b2815480343 SHA1 74a5f54211f864d3d5833d4cb829ecb1b495373c SHA256 cc9545dcd60e4e9f33b78db6f47cf5094acad8e1b51b9ab94da50ba286ed0a5e
 DIST jdk-7-ea-bin-b13-linux-i586-24_may_2007.bin 62966630 RMD160 7ade022abc57e8358bceea106a103fa5ba345711 SHA1 f95467fe02dc25d8a4e5568312afd6151bfbd22f SHA256 3430cfacf88c47493a1a1e78c8e1bd55272f773f9655dc7d7c3669620ad8f276
 EBUILD sun-jdk-1.6.0.02_alpha02.ebuild 5135 RMD160 6acb769ac21f6aadf987cdfd48e52bc0e7b9721c SHA1 03356e52da8a2aca130556f1e2328e7550354f4b SHA256 26b0dfa2702e5178d2cfcac3bf89252bb1f920ec6535362939bd4b3e6056d1d5
-EBUILD sun-jdk-1.7.0.0_alpha13.ebuild 5433 RMD160 8d09627a1db06284e3370bbfb46cf44476cd34a2 SHA1 fc19d590ae3ee96977a18219bd1ce54bac26203c SHA256 8b229b805ded33922619440bf9a708fdc1e43708da3b72d7d5bd9d544d24e762
-MISC ChangeLog 4475 RMD160 83321fcd3cdb1af95e42aa14de5a4f97cc4a5fff SHA1 d61c10fe019b8b3ac3d69308c9f3caf61cb95d2c SHA256 b01ba8f222b4fe180dd5eec65724077806421005ce14b6eba7a3aaaa1960f39d
+EBUILD sun-jdk-1.7.0.0_alpha13.ebuild 4873 RMD160 1d78dad22213b301a070c7b8bd0a78681990dabf SHA1 b7337473702fd386ced1a531b64311df9866acbe SHA256 808082527437af2f82da0825be29069711fad716b9e4cd2d0e5ef22b120f1a55
+MISC ChangeLog 4636 RMD160 b77b0b58ea6802794f4989f5c181471a5334a1df SHA1 5b7f7fa90a7c36d503347ffda80a39c14db9f532 SHA256 8aeb1e7730874211c3921fc4931f2192bc68148107d3582f910bcdb30b31ed37
