@@ -2,7 +2,7 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/sun-jdk-1.5.0.05.ebuild,v 1.2 2005/10/10 16:23:12 betelgeuse Exp $
 
-inherit java-vm-2 eutils
+inherit java-vm-2 eutils pax-utils
 
 MY_PV=${PV/_beta*/}
 MY_PVL=${MY_PV%.*}_${MY_PV##*.}
@@ -15,12 +15,6 @@ MY_RPV=${MY_PV%.*}
 BASE_URL="http://download.java.net/jdk7/binaries/"
 x86file="jdk-7-ea-bin-b${ALPHA}-linux-i586-${DATE}.bin"
 amd64file="jdk-7-ea-bin-b${ALPHA}-linux-amd64-${DATE}.bin"
-
-if use x86; then
-	At=${x86file}
-elif use amd64; then
-	At=${amd64file}
-fi
 
 S="${WORKDIR}/jdk${MY_RPV}"
 DESCRIPTION="Sun's Java Development Kit"
@@ -49,19 +43,10 @@ QA_TEXTRELS_x86="opt/${P}/jre/lib/i386/server/libjvm.so
 	opt/${P}/jre/lib/i386/libdeploy.so"
 
 pkg_nofetch() {
-	local myfile
-	#initialisation
-	myfile=${x86file}
-	if use x86; then
-		myfile=${x86file}
-	elif use amd64; then
-		myfile=${amd64file}
-	fi
-
 	einfo "Please download:"
-	einfo "${myfile} from ${BASE_URL}${myfile}"
+	einfo "${A} from ${BASE_URL}${A}"
 	einfo "Then place it in ${DISTDIR}"
-	einfo "tip: wget ${BASE_URL}${myfile} -O ${DISTDIR}/${myfile}"
+	einfo "tip: wget ${BASE_URL}${A} -O ${DISTDIR}/${A}"
 
 	ewarn "By downloading and installing, you are agreeing to the terms"
 	ewarn "of Sun's prerelease license."
@@ -71,9 +56,9 @@ src_unpack() {
 	# Do a little voodoo to extract the distfile
 	# Find the ELF in the script
 	testExp=$(echo -e '\0105\0114\0106')
-	startAt=$(grep -aonm 1 ${testExp}  ${DISTDIR}/${At} | cut -d: -f1)
+	startAt=$(grep -aonm 1 ${testExp}  ${DISTDIR}/${A} | cut -d: -f1)
 	# Extract and run it
-	tail -n +${startAt} ${DISTDIR}/${At} > install.sfx
+	tail -n +${startAt} ${DISTDIR}/${A} > install.sfx
 	chmod +x install.sfx
 	./install.sfx >/dev/null || die
 	rm install.sfx
@@ -99,19 +84,24 @@ src_unpack() {
 
 src_install() {
 	local dirs="bin include jre lib man"
+
+	# Set PaX markings on all JDK/JRE executables to allow code-generation on
+	# the heap by the JIT compiler.
+	pax-mark m $(list-paxables ${S}{,/jre}/bin/*)
+
 	dodir /opt/${P}
 
 	for i in $dirs ; do
 		cp -pPR $i ${D}/opt/${P}/ || die "failed to copy"
 	done
-	dodoc COPYRIGHT LICENSE README.html
-	dohtml README.html
+	dodoc COPYRIGHT LICENSE README.html || die
+	dohtml README.html || die
 	dodir /opt/${P}/share/
 
 	if use examples; then
-		cp -pPR demo sample ${D}/opt/${P}/share/
+		cp -pPR demo sample ${D}/opt/${P}/share/ || die
 	fi
-	cp -pPR src.zip ${D}/opt/${P}/share/
+	cp -pPR src.zip ${D}/opt/${P}/ || die
 
 
 	if use nsplugin; then
@@ -150,28 +140,12 @@ pkg_postinst() {
 	# Set as default VM if none exists
 	java-vm-2_pkg_postinst
 
-	# if chpax is on the target system, set the appropriate PaX flags
-	# this will not hurt the binary, it modifies only unused ELF bits
-	# but may confuse things like AV scanners and automatic tripwire
-	if has_version sys-apps/chpax; then
-		echo
-		einfo "setting up conservative PaX flags for jar, javac and java"
-
-		for paxkills in "jar" "javac" "java" "javah" "javadoc"; do
-			chpax -${CHPAX_CONSERVATIVE_FLAGS} /opt/${P}/bin/$paxkills
-		done
-
-		chpax -${CHPAX_CONSERVATIVE_FLAGS} /opt/${P}/jre/bin/java_vm
-
-		einfo "you should have seen lots of chpax output above now"
-		ewarn "make sure the grsec ACL contains those entries also"
-		ewarn "because enabling it will override the chpax setting"
-		ewarn "on the physical files - help for PaX and grsecurity"
-		ewarn "can be given by #gentoo-hardened + hardened@gentoo.org"
+	if ! use X; then
+		local xwarn="virtual/x11 and/or"
 	fi
 
 	echo
-	ewarn "Some parts of Sun's JDK require virtual/x11 and/or virtual/lpr to be installed."
+	ewarn "Some parts of Sun's JDK require ${xwarn} virtual/lpr to be installed."
 	ewarn "Be careful which Java libraries you attempt to use."
 
 	echo
@@ -180,4 +154,10 @@ pkg_postinst() {
 	einfo " such as 'enum' are not valid identifiers any more in that mode,"
 	einfo " which can cause incompatibility with certain sources."
 	einfo " Additionally, some API changes may cause some breakages."
+	echo
+	elog "Beginning with 1.5.0.10 the hotspot vm can use epoll"
+	elog "The epoll-based implementation of SelectorProvider is not selected by"
+	elog "default."
+	elog "Use java -Djava.nio.channels.spi.SelectorProvider=sun.nio.ch.EPollSelectorProvider"
+	elog ""
 }
